patching bugs for v.2.1.1

--- a/client/views/admin/elections/electionsAdminResults.html
+++ b/client/views/admin/elections/electionsAdminResults.html
@@ -42,6 +42,7 @@
             </thead>
             <tbody>
                 <tr><td>Description</td><td>{{description}}</td></tr>
+                <tr><td>Winner</td><td>{{getWinner}}</td></tr>
                 {{#each choices}}
                   <tr class="pure-table-odd"><td>Name</td><td>{{name}}</td></tr>
                   <tr><td>Description</td><td>{{description}}</td></tr>
