--- a/client/views/admin/elections/electionsAdminResults.html
+++ b/client/views/admin/elections/electionsAdminResults.html
@@ -26,6 +26,16 @@
             <br/>
           </div>
         {{/if}}
+        {{#if hasPick}}
+          {{getPickResults}}
+          <div>
+            <p>Election results are not updated live</p>
+            <p>Last update: {{getPickTime}}</p>
+            <a id="refresh-pick" class="large-button">Refresh Election Results</a>
+            <br/>
+            <br/>
+          </div>
+        {{/if}}
         <table class="pure-table pure-table-bordered">
           <thead>
             <tr><th>Name</th><th>{{name}}</th></tr>
@@ -47,7 +57,7 @@
                   <tr class="pure-table-odd"><td>Name</td><td>{{name}}</td></tr>
                   <tr><td>Description</td><td>{{description}}</td></tr>
                   {{#if isPick ../_id}}
-                    <tr><td>Votes</td><td>{{votes _id ../_id ../../votes }}</td></tr>
+                    <tr><td>Votes</td><td>{{votes _id ../_id }}</td></tr>
                   {{/if}}
                   {{#if isRank ../_id}}
                     {{#each getRankResults _id ../_id}}
